feat: tolls can be obtained from the network